<resources>
    <string name="app_name" translatable="false">CoronaTracker</string>
    <string name="recovered">Total Recovered:</string>
    <string name="infected">Total Infected:</string>
    <string name="deaths">Total Deaths:</string>
    <string name="tests">Total Tests:</string>
    <string name="new_cases">Cases today:</string>
    <string name="new_deaths">Deaths today:</string>
    <string name="select_list">Select country from below</string>
    <string name="sorted">Countries are sorted by total cases</string>
    <string name="app_desc">Keeps you updated with all coronavirus statistics</string>
    <string name="copyright" translatable="false">Copyright © 2020 AdiJr</string>
    <string name="legal_title">Legal Information</string>
    <string name="privacy_text">This application does not collect any personal information.\n\nDeveloper does not allow advertising
        companies to collect data through his service for ad targeting.\n\nThe privacy policy was last updated on 21/04/2020. It may change from
    time to time. If any material changes to this policy will be made, AdiJr will place a prominent notice within the application.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="third_party_title">Third Party Licences</string>
    <string name="third_party_text" translatable="false">The application icon is made by Freepik from www.flaticon.com \n\nLottie Android \n\nCopyright 2018 Airbnb, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an AS IS BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.\n\nCovid19 API\n\nMIT License\n\nCopyright © 2020 Chris Michael\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="us">United States</string>
    <string name="uk">United Kingdom</string>
    <string name="uae">United Arab Emirates</string>
    <string name="bosnia">Bosnia and Herzegovina</string>
    <string name="chip_eu">Europe</string>
    <string name="chip_na">North America</string>
    <string name="chip_sa">South America</string>
    <string name="chip_asia">Asia</string>
    <string name="chip_aus">Australia</string>
    <string name="chip_afr">Africa</string>
</resources>