<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="pl.adijr.coronatracker.fragments.SearchFragment">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_eu"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_eu"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_afr"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_afr"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_na"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_na"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sa"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_sa"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipIconTint="@android:color/white"
                app:chipStartPadding="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_asia"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_asia"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_aus"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/chip_aus"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAvailableCountries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
            tools:listitem="@layout/item_country" />

        <TextView
            android:id="@+id/tvAvailableCoutries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/select_list"
            android:textColor="@color/primaryColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sorted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAvailableCoutries" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>